// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeforeProceedingBanner should match the snapshot if SUPPORT_URL_TO_UNLINK_SOCIAL_MEDIA_ACCOUNT does not have a support link 1`] = `
<div
  className="alert d-flex align-items-start alert-warning mt-n2"
>
  <div>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-triangle-exclamation mr-2"
      data-icon="triangle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div>
    Before proceeding, please unlink all social media accounts.
  </div>
</div>
`;

exports[`BeforeProceedingBanner should match the snapshot when SUPPORT_URL_TO_UNLINK_SOCIAL_MEDIA_ACCOUNT has a support link 1`] = `
<div
  className="alert d-flex align-items-start alert-warning mt-n2"
>
  <div>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-triangle-exclamation mr-2"
      data-icon="triangle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div>
    Before proceeding, please 
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="http://test-support.edx"
      onClick={[Function]}
      target="_self"
    >
      unlink all social media accounts
    </a>
    .
  </div>
</div>
`;
